--- a/style.css
+++ b/style.css
@@ -2,11 +2,13 @@
 main{
     background-color: white;
 }
+/*style logo del menu*/
 .logo{
     width: 100%;
     max-width: 60px;
     height:auto;
 }
+/*style menu*/
 .sticky-header {
     width: 100%;
     height: auto;
@@ -14,19 +16,24 @@ main{
     margin-right: auto;
     position: fixed; /* Fija el menú en la parte superior */
     top: 0; /* Lo coloca en la parte superior de la ventana */
-    width: 100%; /* Ancho completo del menú */
     z-index: 2;
     display: on;
   }
-  
-
+ /*style banner inicio*/ 
 #contenedor_banner{
     width: 100%;
     height:auto;
     background-color: white;
     margin-bottom: 10px;
 }
+.carousel-inner img{
+    width: 100%;
+    height:auto;
+    margin-left: auto;
+    margin-right: auto;
 
+}
+/*style introduccion*/
 #introduccion{
     width: 100%;
     height: auto;
@@ -56,6 +63,7 @@ main{
     font-size: 30px;
     margin-bottom: 30px;
 }
+/*style conteiner card y text*/
 
 #container_card{
     width: 100%;
@@ -67,10 +75,39 @@ main{
     background-color: #D87010;
 }
 
-#container_card h1, h2{
+#container_card h1{
+    font-size: 30px;
     text-align: center;
     margin-bottom: 10px;
 }
+#container_card h2{
+    font-size: 27px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+#container_card h6{
+    font-size: 20px;
+    text-align: justify;
+    margin-top:20px;
+
+}
+/*style de card de Introduccion*/
+.card{
+    width: 100%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+.card img{
+    width: 100%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+/*style de promocion*/
 .promocion{
     width: 100%;
     height: auto;
@@ -78,50 +115,54 @@ main{
     margin-right: auto;
     background-color: white;
     text-align: center;
-
 }
-
-.card{
+/*style card de img y text de promocion*/
+.card_promo{
+    width: 100%;
+    height: auto;
     margin-left: auto;
     margin-right: auto;
-    text-align: center;
-    margin-bottom: 20px;
-    margin-top: 20px;
+    background: white;
+    border: none;
 }
-.img_card{
+.card_promo img{
+    width: 100%;
+    max-width: 400px;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
     margin-top:30px;
     margin-bottom: 10px;
-}
-.card h6{
-    margin-top:20px;
-    text-align: justify;
-}
 
+}
 .card_text{
     width: 100%;
     height: auto;
     margin-left: auto;
     margin-right: auto;
+    padding: 20px 20px;
     text-align: center;
     margin-bottom: 20px;
     margin-top: 20px;
+    background-color: white;
 
 }
-
-.card_text h4, ul, li {
-    background-color: white;
+.card_text ul h2{
+    font-size: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+.card_text p{
     text-align: justify;
     margin-bottom: 10px;
-}
-.card_text h2{
-    margin-top:50px;
-    margin-bottom: 30px;
-    text-align: justify;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 20px;
 }
 
-
-
-#container_informacion{
+/*style de noticias*/
+#container_noticia{
     width: 100%;
     height: auto;
     margin-left: auto;
@@ -131,6 +172,13 @@ main{
     background-color: #D87010;
     text-align: justify;
 }
+#container_noticia h2{
+    font-size:40px;
+    text-align: center;
+    margin-bottom: 20px;
+
+}
+
 
 #container_informacion p{
    font-size:20px;
@@ -163,7 +211,7 @@ main{
 
 #contacto{
     width: 100%;
-    height: 600px;
+    height: 800px;
     margin-left: auto;
     margin-right: auto;
     background-image: url("img/cimenea\ hogar.jpg");
@@ -171,7 +219,7 @@ main{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    padding-top: 170px;
+    padding-top: 150px;
 }
 .style_text_contact{
     width: 100%;
@@ -186,8 +234,7 @@ main{
 }
 .style_text_contact h1,h2,h3{
     text-align: center;
-    font-size: 50px;
-   
+    font-size: 40px;
 
 }
 
@@ -232,7 +279,7 @@ main{
 
 .footer{
     width: 100%;
-    height: 60px;
+    height: 100px;
     background-color: #D87010;
     padding: 40px 40px;
 }
